--- a/frontend/src/BlogCard.css
+++ b/frontend/src/BlogCard.css
@@ -1,24 +1,35 @@
 .card {
   color: white;
   background-color: black;
-  border-bottom: 4px solid #2a2a2a;
+  border-bottom: 5px solid #2a2a2a;
   margin: calc(10% / 6);
 }
 
 .card:hover {
-  border-bottom: 4px solid #5aa79f;
+  border-bottom: 5px solid #5aa79f;
 }
+
+/* #nopadding {
+  padding-left: none !important;
+  padding-right: none !important;
+} */
 
 .card-title {
   color: #5aa79f;
+  margin-bottom: 16px;
+  font-size: 20px;
 }
 
 .readmore {
   color: #5aa79f;
+  margin-bottom: 16px;
 }
 
 .card-text {
   color: #999daa;
+  font-size: 17px;
+  line-height: 20px;
+  /* font-weight: lighter; */
 }
 
 .blogmetadata {
