Created UI for Create Blog Form

--- a/frontend/src/Toggle.css
+++ b/frontend/src/Toggle.css
@@ -17,8 +17,8 @@
   color: #5aa79f !important;
 }
 
-.outer {
+/* .outer {
   display: flex;
   align-items: center;
   justify-content: center;
-}
+} */
